Have play through words working

--- a/extension/overlay.html
+++ b/extension/overlay.html
@@ -22,8 +22,8 @@
 	}
 	#current-word{
 		height: 128px;
-		line-height: 128px;
 		width: 256px;
+		font-size: 3em;
 		text-align: center;
 		margin: 0 auto;
 		padding-top: 32px;
@@ -36,7 +36,7 @@
 	#control-button{
 		width: 64px;
 		height: 32px;
-		margin: 0 auto;
+		margin: 64px auto 0 auto;
 		text-align: center;
 		cursor: pointer;
 	}
