Updatd split regex to include dash, ndash, and mdash

--- a/extension/overlay.html
+++ b/extension/overlay.html
@@ -1,18 +1,14 @@
 <div id="speedread-overlay">
 	<style type="text/css">
-		body{
-			background-color: orange;
-		}
-
 		#speedread-overlay{
 			left: 0;
 			right: 0;
 			z-index: 9001;
-			height: 288px;
+			height: 350px;
 			background-color: rgba(0, 0, 0, .5);
 			width: 100%;
 			position: fixed;
-			margin: 20% auto;
+			margin: 10% auto;
 		}
 		#speedread-main{
 			width: 512px;
@@ -28,9 +24,10 @@
 			padding: 8px 8px 0 0;
 		}
 		#speedread-current-word{
+			font-weight: 500;
 			height: 128px;
 			width: 256px;
-			font-size: 3em;
+			font-size: 4em;
 			text-align: center;
 			margin: 0 auto;
 			padding-top: 80px;
@@ -43,7 +40,7 @@
 		#speedread-control-button{
 			width: 64px;
 			height: 32px;
-			margin: 64px auto 0 auto;
+			margin: 96px auto 0 auto;
 			text-align: center;
 			cursor: pointer;
 		}
@@ -76,6 +73,7 @@
 			width: 384px;
 			text-align: center;
 			margin: 0 auto;
+			font-size: 1.2em;
 		}
 	</style>
 
