--- a/extension/overlay.html
+++ b/extension/overlay.html
@@ -1,93 +1,101 @@
-<div id="speedread-overlay">
-	<style type="text/css">
-		#speedread-overlay{
-			left: 0;
-			right: 0;
-			z-index: 9001;
-			height: 350px;
-			background-color: rgba(0, 0, 0, .5);
-			width: 100%;
-			position: fixed;
-			margin: 10% auto;
-		}
-		#speedread-main{
-			width: 512px;
-			margin: 0 auto;
-			height: 100%;
-			color: black;
-			background-color: rgba(255, 255, 255, .9 ) !important;
-			border: black 1px solid;
-		}
-		#speedread-exit-button{
-			float: right;
-			cursor: pointer;
-			padding: 8px 8px 0 0;
-		}
-		#speedread-current-word{
-			font-weight: 500;
-			height: 128px;
-			width: 256px;
-			font-size: 4em;
-			text-align: center;
-			margin: 0 auto;
-			padding-top: 80px;
-			vertical-align: middle;
-		}
-		span.speedread-center-word{
-			display: inline-block;
-			vertical-align: middle;
-		}
-		#speedread-control-button{
-			width: 64px;
-			height: 32px;
-			margin: 96px auto 0 auto;
-			text-align: center;
-			cursor: pointer;
-		}
-		.speedread-button{
-			display: inline-block;
-			padding: 6px 12px;
-			margin-bottom 0;
-			font-size: 14px;
-			font-weight: normal;
-			line-height: 1.42;
-			text-align: center;
-			white-space: nowrap;
-			vertical-align: middle;
-			cursor: pointer;
-			background-image: none;
-			border: 1px solid transparent;
-			border-radius: 4px;
-			color: #fff;
-			background-color: #428bca;
-			background-color: #357edb;
-		}
-		#speedread-pause, #speedread-replay{
-			display: none;
-		}
-		#speedread-wordcount, #speedread-words-per-minute{
-			display: inline-block;
-		}
-		#speedread-word-rate{
-			padding-top: 32px;
-			width: 384px;
-			text-align: center;
-			margin: 0 auto;
-			font-size: 1.2em;
-		}
-	</style>
+<div id="speedread-background">
+	<div id="speedread-overlay">
+		<style type="text/css">
+			#speedread-background{
+				width: 100%;
+				height: 100%;
+			}
+			#speedread-overlay{
+				left: 0;
+				right: 0;
+				z-index: 9001;
+				height: 350px;
+				background-color: rgba(0, 0, 0, .5);
+				width: 100%;
+				position: fixed;
+				margin: 10% auto;
+				font-family: "Times New Roman" !important;
+				font: normal !important;
+			}
+			#speedread-main{
+				width: 512px;
+				margin: 0 auto;
+				height: 100%;
+				color: black;
+				background-color: rgba(255, 255, 255, .9 ) !important;
+				border: black 1px solid;
+			}
+			#speedread-exit-button{
+				float: right;
+				cursor: pointer;
+				padding: 8px 8px 0 0;
+			}
+			#speedread-current-word{
+				font-weight: 500;
+				height: 128px;
+				width: 256px;
+				font-size: 4em;
+				text-align: center;
+				margin: 0 auto;
+				padding-top: 80px;
+				vertical-align: middle;
+			}
+			span.speedread-center-word{
+				display: inline-block;
+				vertical-align: middle;
+			}
+			#speedread-control-button{
+				width: 64px;
+				height: 32px;
+				margin: 32px auto 0 auto;
+				text-align: center;
+				cursor: pointer;
+			}
+			.speedread-button{
+				display: inline-block;
+				padding: 6px 12px;
+				margin-bottom 0;
+				font-size: 14px;
+				font-weight: normal;
+				line-height: 1.42;
+				text-align: center;
+				white-space: nowrap;
+				vertical-align: middle;
+				cursor: pointer;
+				background-image: none;
+				border: 1px solid transparent;
+				border-radius: 4px;
+				color: #fff;
+				background-color: #428bca;
+				background-color: #357edb;
+			}
+			#speedread-pause, #speedread-replay{
+				display: none;
+			}
+			#speedread-wordcount, #speedread-words-per-minute{
+				display: inline-block;
+			}
+			#speedread-word-rate{
+				padding-top: 32px;
+				width: 384px;
+				text-align: center;
+				margin: 0 auto;
+				font-size: 1.2em;
+			}
+		</style>
 
-	<div id="speedread-main">
-		<div id="speedread-exit-button">[x]</div>
-		<div id="speedread-current-word"></div>
-		<div id="speedread-control-button">
-			<button class="speedread-button" id="speedread-play">Play</button>
-			<button class="speedread-button" id="speedread-pause">Pause</button>
-			<button class="speedread-button" id="speedread-replay">Replay</button>
-		</div>
-		<div id="speedread-word-rate">
-			<div id="speedread-wordcount">500</div> words at
-			<div id="speedread-words-per-minute">500</div> words/minute
+		<div id="speedread-main">
+			<div id="speedread-exit-button">[x]</div>
+			<div id="speedread-current-word"></div>
+			<div id="speedread-control-button">
+				<button class="speedread-button" id="speedread-play">Play</button>
+				<button class="speedread-button" id="speedread-pause">Pause</button>
+				<button class="speedread-button" id="speedread-replay">Replay</button>
+			</div>
+			<div id="speedread-word-rate">
+				<div id="speedread-wordcount">500</div> words at
+				<div id="speedread-words-per-minute">500</div> words/minute
+			</div>
 		</div>
 	</div>
 </div>
