--- a/extension/overlay.html
+++ b/extension/overlay.html
@@ -4,6 +4,10 @@
 			#speedread-background{
 				width: 100%;
 				height: 100%;
+				position: fixed;
+				z-index: 9000;
+				top: 0;
+				left: 0;
 			}
 			#speedread-overlay{
 				left: 0;
