All working save local storage

--- a/extension/overlay.html
+++ b/extension/overlay.html
@@ -17,7 +17,7 @@
 				background-color: rgba(0, 0, 0, .5);
 				width: 100%;
 				position: fixed;
-				margin: 10% auto;
+				top: 20%;
 				font-family: "Times New Roman" !important;
 				font: normal !important;
 			}
@@ -55,7 +55,7 @@
 				text-align: center;
 				cursor: pointer;
 			}
-			.speedread-button{
+			.speedread-button, #speedread-edit-save{
 				display: inline-block;
 				padding: 6px 12px;
 				margin-bottom 0;
@@ -76,7 +76,7 @@
 			#speedread-pause, #speedread-replay{
 				display: none;
 			}
-			#speedread-wordcount, #speedread-words-per-minute{
+			#speedread-wordcount, #speedread-words-per-minute, #speedread-edit{
 				display: inline-block;
 			}
 			#speedread-word-rate{
@@ -85,6 +85,16 @@
 				text-align: center;
 				margin: 0 auto;
 				font-size: 1.2em;
+			}
+			#speedread-edit{
+				display: none;
+			}
+			#speedread-input-edit{
+				width: 48px;
+			}
+			#speedread-edit-save{
+				height: 24px;
+				line-height: 0px;
 			}
 		</style>
 
@@ -98,7 +108,12 @@
 			</div>
 			<div id="speedread-word-rate">
 				<div id="speedread-wordcount">500</div> words at
-				<div id="speedread-words-per-minute">500</div> words/minute
+				<div id="speedread-words-per-minute">500</div>
+				<div id="speedread-edit">
+					<input type="text" id="speedread-input-edit" value="" name="">
+					<button id="speedread-edit-save">Save</button>
+				</div>
+				words/minute
 			</div>
 		</div>
 	</div>
